--- a/Primer Clase.html
+++ b/Primer Clase.html
@@ -103,7 +103,7 @@
         en una cárcel alejada de vista y mente. Malfurion después señaló que a
         veces fue a visitar a Illidan a su prisión con la esperanza de traerle
         de vuelta al camino correcto.
-      </h3>
+      </h3> <li> <a href="#Cabeza">Ir al principio de la pagina</a></li>
     </section>
     <hr width="500" height="2000" />
     <section>
@@ -192,6 +192,7 @@
         fuerza principal para derrotar a la Legión, poniéndose del lado de los
         héroes de Azeroth.
       </h3>
+      <li> <a href="#Cabeza">Ir al principio de la pagina</a></li>
     </section>
     <hr width="500" height="2000" />
     <section>
@@ -212,7 +213,6 @@
       </ul>
       <li> <a href="#Cabeza">Ir al principio de la pagina</a></li>
     </section>
- 
   </main>
   <hr width="500" height="2000" />
   <footer>
