--- a/Primer Clase.html
+++ b/Primer Clase.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>WoW Illidan Tempestira</title>
-  <link rel="shortcut icon" href="IconoWOW36x36.ico.png" />
+  <link rel="shortcut icon" href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp" />
 </head>
 
 <body>
@@ -13,6 +13,9 @@
     <li><a href="#download">Ir a los links de descargas</a></li>
     <li><a href="#Elfo">La historia antes de ser Demon Hunter</a></li>
     <li> <a href="#DH">Su vida Luego del cambio</a></li>
+    <li> <a href="#mapa">Donde estan ubicadas las instalaciones de blizzard</a></li>
+    <li> <a href="formulario.html">Ir a su Mazmorra</a></li>
+    
 
 
   </header>
@@ -103,7 +106,8 @@
         en una cárcel alejada de vista y mente. Malfurion después señaló que a
         veces fue a visitar a Illidan a su prisión con la esperanza de traerle
         de vuelta al camino correcto.
-      </h3> <li> <a href="#Cabeza">Ir al principio de la pagina</a></li>
+      </h3>
+      <li> <a href="#Cabeza">Ir al principio de la pagina</a></li>
     </section>
     <hr width="500" height="2000" />
     <section>
@@ -200,8 +204,8 @@
       <ul>
         <li>
           <h3>En el Link de Abajo se tiene el servidor Gratis</h3>
-          <a href="https://naerzone.com/gestion/descargas.php" target="_blank">World of Warcraft Naerzone Lich King o
-            World of Warcraft Naerzone Legion </a>
+          <li><a href="https://naerzone.com/gestion/descargas.php" target="_blank">World of Warcraft Naerzone Lich King o
+            World of Warcraft Naerzone Legion </a></li>
         </li>
         <li>
           <h3>En el Link de abajo se tiene el servidor oficial por Blizzard</h3>
@@ -212,6 +216,13 @@
         </li>
       </ul>
       <li> <a href="#Cabeza">Ir al principio de la pagina</a></li>
+    </section>
+    <hr width="500" height="2000" />
+    <section id="mapa">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3438.4482211233885!2d-97.77640428554521!3d30.48006320481832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644cd59b21b74df%3A0xda07c906e423e699!2sBlizzard%20Entertainment!5e0!3m2!1ses!2sar!4v1666982033550!5m2!1ses!2sar"
+        width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <hr width="500" height="2000" />
