--- a/Pagina de incio wow.html
+++ b/Pagina de incio wow.html
@@ -1,97 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <title>World of Illidan</title>
-    <link
-      rel="shortcut icon"
-      href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"
-    />
-  </head>
-  <body>
-    <header>
-      <h1>World of Illidan</h1>
-      <p>
-        <a href="https://es-la.facebook.com/Blizzard/" target="_blank">
-          Facebook</a
-        >
-      </p>
-      <p>
-        <a href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
-          >Instagram</a
-        >
-      </p>
-      <p>
-        <a
-          href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-          target="_blank"
-          >Twitter</a
-        >
-      </p>
-      <div class="topnav">
-        <input type="text" placeholder="Search..." />
-      </div>
-    </header>
-    <main>
-      <section>
-        <p><a href="Pagina de Descargas.html">Link de Descarga</a></p>
-      </section>
-      <section>
-        <p><a href="Pagina de la biografia.html">Biografia</a></p>
-      </section>
-      <section>
-        <p><a href="Illidan en Wow.html">El paso de Illidan por world of warcraft</a></p>
-      </section>
-      <section>
-        <p><a href="GaleriaWoW.html">Galeria</a></p>
-      </section>
-      <section>
-        <p><a href="CitasIllidan.html">Citas</a></p>
-      </section>
-      <p>
-        Illidan Tempestira (Illidan Stormrage en Warcraft III e Illigay Furia de
-        Tormenta en los libros de RPG) fue el autoproclamado Señor de
-        Terrallende, que gobernó desde el Templo Oscuro. Illidan nació como un
-        elfo de la noche, y, en palabras de Maiev Cantosombrío "no es un demonio
-        ni un elfo de la noche, sino algo más". Es el hermano gemelo de
-        Malfurion, y, al igual que él, siempre estuvo enamorado de Tyrande. Es
-        difícil clasificar todos sus poderes, por el hecho de que el aprendió
-        muchos hechizos siendo cazador de demonios, hechicero, y habiendo
-        recibido los poderes de la Calavera de Gul'dan
-      </p>
-      <p>
-        Sus deseos de poder y magia arcana lo han conducido a el hacer actos
-        horroríficos en contra de su propia gente y las razas de Azeroth,
-        incluyendo traer a Sargeras durante la Guerra de los Ancestros y crear
-        el segundo Pozo de la Eternidad. Fue encarcelado durante diez mil años
-        por sus acciones hasta su liberación durante la Tercera Guerra. Tuvo
-        varios títulos, conocido como el Traidor por sus actos en contra de los
-        elfos de la noche y como Señor de Terrallende, tras derrotar al demonio
-        Magtheridon. Tratando de derrocar a su antiguo prisionero, Maiev se alió
-        con Akama para invadir el Templo Oscuro, donde acorralaron a Illidan en
-        su sagrario interior y lo derrotaron, poniendo punto final a una de los
-        historias más trágicas en Azeroth.
-      </p>
-      <p>
-        <img
-          src="https://as01.epimg.net/meristation/imagenes/2018/09/28/reportajes/1538086087_636760_1538647159_noticia_normal.jpg"
-        />
-      </p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-      <p><li>test</li></p>
-    </main>
-    <footer>
-      <p>
-        Pagina Creada por una persona con 0 conocimientos de desarrollo web.
-      </p>
-    </footer>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="Css en inicio.css" />
+  <title>World of Illidan</title>
+  <link rel="shortcut icon" href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp" />
+</head>
+
+<body>
+  <header>
+    <h1 id="title">World of Illidan</h1>
+
+    <p id="linkface">
+      <a id="linkface" href="https://es-la.facebook.com/Blizzard/" target="_blank">
+        Facebook</a>
+    </p>
+    <p id="linkinst">
+      <a id="linkinst" href="https://www.instagram.com/blizzard/?hl=es" target="_blank">Instagram</a>
+    </p>
+    <p id="linktwitter">
+      <a id="linktwitter"
+        href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+        target="_blank">Twitter</a>
+    </p>
+    <div class="topnav">
+      <input type="text" placeholder="Search..." />
+    </div>
+  </header>
+  <main>
+    <p id="img">
+      <img
+        src="https://as01.epimg.net/meristation/imagenes/2018/09/28/reportajes/1538086087_636760_1538647159_noticia_normal.jpg" />
+    </p>
+    <section>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+    </section>
+
+    <p>
+      <a id="Ventanas" href="Pagina de Descargas.html">Link de Descarga</a>
+    </p>
+
+    <p><a id="Ventanas" href="Pagina de la biografia.html">Biografia</a></p>
+
+    <p>
+      <a id="Ventanas" href="Illidan en Wow.html">El paso de Illidan por world of warcraft</a>
+    </p>
+
+    <p><a id="Ventanas" href="GaleriaWoW.html">Galeria</a></p>
+
+    <p><a id="Ventanas" href="CitasIllidan.html">Citas</a></p>
+
+    <p id="text">
+      Illidan Tempestira (Illidan Stormrage en Warcraft III e Illigay Furia de
+      Tormenta en los libros de RPG) fue el autoproclamado Señor de
+      Terrallende, que gobernó desde el Templo Oscuro. Illidan nació como un
+      elfo de la noche, y, en palabras de Maiev Cantosombrío "no es un demonio
+      ni un elfo de la noche, sino algo más". Es el hermano gemelo de
+      Malfurion, y, al igual que él, siempre estuvo enamorado de Tyrande. Es
+      difícil clasificar todos sus poderes, por el hecho de que el aprendió
+      muchos hechizos siendo cazador de demonios, hechicero, y habiendo
+      recibido los poderes de la Calavera de Gul'dan
+    </p>
+    <p id="text2">
+      Sus deseos de poder y magia arcana lo han conducido a el hacer actos
+      horroríficos en contra de su propia gente y las razas de Azeroth,
+      incluyendo traer a Sargeras durante la Guerra de los Ancestros y crear
+      el segundo Pozo de la Eternidad. Fue encarcelado durante diez mil años
+      por sus acciones hasta su liberación durante la Tercera Guerra. Tuvo
+      varios títulos, conocido como el Traidor por sus actos en contra de los
+      elfos de la noche y como Señor de Terrallende, tras derrotar al demonio
+      Magtheridon. Tratando de derrocar a su antiguo prisionero, Maiev se alió
+      con Akama para invadir el Templo Oscuro, donde acorralaron a Illidan en
+      su sagrario interior y lo derrotaron, poniendo punto final a una de los
+      historias más trágicas en Azeroth.
+    </p>
+  </main>
+  <footer>
+    <p id="piepagina">
+      Pagina Creada por una persona con 0 conocimientos de desarrollo web.
+    </p>
+  </footer>
+</body>
+
 </html>
