--- a/Pagina de incio wow.html
+++ b/Pagina de incio wow.html
@@ -23,11 +23,26 @@
         href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
         target="_blank">Twitter</a>
     </p>
-    <div class="topnav">
+    <div class="topnav" id="nav" >
       <input type="text" placeholder="Search..." />
     </div>
   </header>
   <main>
+    
+
+    <p id="Ventanas">
+      <a id="Ventanas" href="Pagina de Descargas.html">Link de Descarga</a>
+    </p>
+
+    <p id="Ventanas"><a id="Ventanas"  href="Pagina de la biografia.html">Biografia</a></p>
+
+    <p id="Ventanas">
+      <a id="Ventanas" href="Illidan en Wow.html">El paso de Illidan por world of warcraft</a>
+    </p>
+
+    <p id="Ventanas"><a id="Ventanas" href="GaleriaWoW.html">Galeria</a></p>
+
+    <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html">Citas</a></p>
     <p id="img">
       <img
         src="https://as01.epimg.net/meristation/imagenes/2018/09/28/reportajes/1538086087_636760_1538647159_noticia_normal.jpg" />
@@ -45,20 +60,6 @@
       <li>test</li>
       <li>test</li>
     </section>
-
-    <p>
-      <a id="Ventanas" href="Pagina de Descargas.html">Link de Descarga</a>
-    </p>
-
-    <p><a id="Ventanas" href="Pagina de la biografia.html">Biografia</a></p>
-
-    <p>
-      <a id="Ventanas" href="Illidan en Wow.html">El paso de Illidan por world of warcraft</a>
-    </p>
-
-    <p><a id="Ventanas" href="GaleriaWoW.html">Galeria</a></p>
-
-    <p><a id="Ventanas" href="CitasIllidan.html">Citas</a></p>
 
     <p id="text">
       Illidan Tempestira (Illidan Stormrage en Warcraft III e Illigay Furia de
