--- a/Pagina de Descargas.html
+++ b/Pagina de Descargas.html
@@ -1,73 +1,74 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <title>Descarga</title>
+  <head >
+    <title >Descarga</title>
     <link
       rel="shortcut icon"
-      href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"
-    />
+      href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"/>
+      <link rel="stylesheet" href="Css-Descargas.css">
   </head>
   <body>
-    <header>
-      <h3>Links de World of Warcraft</h3>
-      <p>
-        <a href="https://es-la.facebook.com/Blizzard/" target="_blank">
+    
+    <header  id="title" >
+ 
+      <h3 id="titulo" >Links de World of Warcraft</h3>
+      <p id="face"  >
+        <a id="face" href="https://es-la.facebook.com/Blizzard/" target="_blank">
           Facebook</a
         >
       </p>
-      <p>
-        <a href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
+      <p id="inst">
+        <a id="inst" href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
           >Instagram</a
         >
       </p>
-      <p>
-        <a
+      <p id="twit">
+        <a id="twit"
           href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
           target="_blank"
           >Twitter</a
         >
       </p>
-      <p>
-        <a href="Pagina de incio wow.html">Inicio</a>
+      <p id="inicio">
+        <a id="inicio" href="Pagina de incio wow.html">Inicio</a>
       </p>
-
-      <div class="topnav">
-        <input type="text" placeholder="Search..." />
-      </div>
     </header>
     <main>
+      <p id="imgtop" >
+        <img  id="imgtop" src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg" >
+      </p>
       <h1>Obtener el juego gratis aqui</h1>
       <li>
-        <a href="https://naerzone.com/index.php" target="_blank">Naerzone</a>
+        <a id="wow" href="https://naerzone.com/index.php" target="_blank">Naerzone</a>
       </li>
-      <li><a href="https://ultimowow.com/es/" target="_blank">Ultimowow</a></li>
-      <li><a href="https://www.warmane.com/" target="_blank">Warmane</a></li>
-      <li><a href="https://wowaura.com/es/" target="_blank">Wowaura</a></li>
-      <li><a href="https://www.sking.nat.cu/" target="_blank">Sking</a></li>
+      <li><a id="wow" href="https://ultimowow.com/es/" target="_blank">Ultimowow</a></li>
+      <li><a id="wow" href="https://www.warmane.com/" target="_blank">Warmane</a></li>
+      <li><a id="wow" href="https://wowaura.com/es/" target="_blank">Wowaura</a></li>
+      <li><a id="wow" href="https://www.sking.nat.cu/" target="_blank">Sking</a></li>
       <li>
-        <a href="https://www.chromiecraft.com/" target="_blank">Chromiecraft</a>
+        <a id="wow" href="https://www.chromiecraft.com/" target="_blank">Chromiecraft</a>
       </li>
       <h1>Obtener el juego oficial</h1>
       <li>
-        <a href="https://wowclassic.blizzard.com/es-es/" target="_blank"
+        <a id="wow" href="https://wowclassic.blizzard.com/es-es/" target="_blank"
           >Wow Classic</a
         >
       </li>
       <li>
-        <a href="https://dragonflight.blizzard.com/es-es/" target="_blank"
+        <a id="wow" href="https://dragonflight.blizzard.com/es-es/" target="_blank"
           >DragonFlight</a
         >
       </li>
       <li>
-        <a href="https://playwarcraft3.com/es-es/" target="_blank"
+        <a  id="wow" href="https://playwarcraft3.com/es-es/" target="_blank"
           >Warcraft 3</a
         >
       </li>
     </main>
-    <footer>
-      <p>
-        Pagina Creada por una persona con 0 conocimientos de desarrollo web.
-      </p>
+    <footer >
+        <p id="piepagina" >
+          Pagina Creada por una persona con 0 conocimientos de desarrollo web.
+        </p>
     </footer>
-  </body>
+    </body>
 </html>
