--- a/Pagina de incio wow.html
+++ b/Pagina de incio wow.html
@@ -9,8 +9,9 @@
 
 <body>
   <header>
+   
     <h1 id="title">World of Illidan</h1>
-
+ 
     <p id="linkface">
       <a id="linkface" href="https://es-la.facebook.com/Blizzard/" target="_blank">
         Facebook</a>
@@ -29,6 +30,10 @@
   </header>
   <main>
     
+    <p id="imgtop" >
+      <img  id="imgtop" src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg" >
+      
+    </p>
 
     <p id="Ventanas">
       <a id="Ventanas" href="Pagina de Descargas.html">Link de Descarga</a>
