--- a/Pagina de la biografia.html
+++ b/Pagina de la biografia.html
@@ -6,38 +6,44 @@
       rel="shortcut icon"
       href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"
     />
+    <link rel="stylesheet" href="Css-Biografia.css">
   </head>
 
   <body>
-    <header>
-      <h1>Biografia de Illidan</h1>
-      <p><a href="Pagina de Descargas.html">Descargas</a></p>
-      <p><a href="Pagina de incio wow.html">Inicio</a></p>
+    <header id="titulo">
+      <h1 id="subtitulo">Biografia de Illidan</h1>
 
-      <p>
-        <a href="https://es-la.facebook.com/Blizzard/" target="_blank">
+      <p id="face" >
+        <a id="face" href="https://es-la.facebook.com/Blizzard/" target="_blank">
           Facebook</a
         >
       </p>
-      <p>
-        <a href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
+      <p id="inst">
+        <a  id="inst" href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
           >Instagram</a
         >
       </p>
-      <p>
-        <a
+      <p id="twit">
+        <a id="twit"
           href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
           target="_blank"
           >Twitter</a
         >
       </p>
-      <div class="topnav">
-        <input type="text" placeholder="Search..." />
-      </div>
+      
+      <p id="ventanaI" ><a id="ventanaI" href="Pagina de Descargas.html">Descargas</a></p>
+      <p id="ventanaII" ><a id="ventanaII" href="Pagina de incio wow.html">Inicio</a></p>
+
     </header>
     <main>
-      <h2>Biografia</h2>
-      <p>
+      <div class="topnav" id="nav">
+        <input type="text" placeholder="Search..." />
+      </div>
+      <p id="imgtop" >
+        <img  id="imgtop" src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg" >
+      </p>
+      <h2 id="titbio">Biografia</h2>
+      <p id="bio">
         Cabe señalar que la "historia alterada" hace referencia a la historia
         oficial del entorno Warcraft. Illidan, hermano gemelo de Malfurion,
         practico la magia de la nobleza de Azshara. En su juventud intentó
@@ -49,10 +55,8 @@
         destino, Illidan todavía estaba buscando el suyo. Se convirtió en el
         hechicero personal del líder militar Kur'talos Cresta
       </p>
-      <h2>Infancia de Illidan</h2>
-      <iframe
-        width="560"
-        height="315"
+      <h2 id="subtitulo2">Infancia de Illidan</h2>
+      <iframe id="video"
         src="https://www.youtube.com/embed/2d8-4l1OPaw"
         title="YouTube video player"
         frameborder="0"
@@ -61,7 +65,7 @@
       ></iframe>
     </main>
     <footer>
-      <p>
+      <p id="piepagina" >
         Pagina Creada por una persona con 0 conocimientos de desarrollo web.
       </p>
     </footer>
