--- a/CitasIllidan.html
+++ b/CitasIllidan.html
@@ -6,65 +6,76 @@
       rel="shortcut icon"
       href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"
     />
+    <link rel="stylesheet" href="Css-citas.css" />
   </head>
   <body>
-    <header>
-      <h3>Citas de Illidan Tempestira</h3>
-      <p>
-        <a href="https://es-la.facebook.com/Blizzard/" target="_blank">
+    <header id="encabezado">
+      <h3 id="titulo">World of Illidan</h3>
+      <p id="face">
+        <a
+          id="face"
+          href="https://es-la.facebook.com/Blizzard/"
+          target="_blank"
+        >
           Facebook</a
         >
       </p>
-      <p>
-        <a href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
+      <p id="inst">
+        <a
+          id="inst"
+          href="https://www.instagram.com/blizzard/?hl=es"
+          target="_blank"
           >Instagram</a
         >
       </p>
-      <p>
+      <p id="twit">
         <a
+          id="twit"
           href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
           target="_blank"
           >Twitter</a
         >
       </p>
-      <p>
-        <a href="Pagina de incio wow.html">Inicio</a>
+      <p id="inicio">
+        <a id="inicio" href="Pagina de incio wow.html">Inicio</a>
       </p>
-      <p><a href="Pagina de Descargas.html">Descargas</a></p>
-
-      <div class="topnav">
-        <input type="text" placeholder="Search..." />
-      </div>
+      <p id="descarga">
+        <a id="descarga" href="Pagina de Descargas.html">Descargas</a>
+      </p>
     </header>
 
     <main>
-      <h3>
+      <p id="imgtop" >
+        <img  id="imgtop" src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg" >
+      </p>
+      <h3 id="subtitulo">Citas de Illidan Tempestira</h3>
+      <h3 id="txt1">
         -"Porque una vez te quise, Tyrande, daré caza a los demonios., ¡pero
         jamás deberé nada a nuestra gente!"
       </h3>
 
-      <h3>
+      <h3 id="txt2">
         -"¡Me liberan después de diez mil años y mi hermano sigue pensando que
         soy un villano! ¡Yo le ensenaré mi verdadero poder! ¡Le demostraré que
         los demonios no tienen poder sobre mí!"
       </h3>
 
-      <h3>
+      <h3 id="txt3">
         -"Apestas a muerte, humano. ¡Te arrepentirás de haberte acercado a mí!"
       </h3>
 
-      <h3>
+      <h3 id="txt4">
         -"Ahora, por lo menos, los demoniosno seguirán corrompiendo los bosques.
         Pero si destruyo la Calavera y reclamo sus poderes como míos, seré más
         fuerte que cualquiera de los tenientes de Archimonde..."
       </h3>
-      <h3>-"¡AHORA ESTOY COMPLETO!"</h3>
+      <h3 id="txt5">-"¡AHORA ESTOY COMPLETO!"</h3>
     </main>
 
     <footer>
-        <p>
-            Pagina Creada por una persona con 0 conocimientos de desarrollo web.
-          </p>
+      <p id="piepagina" >
+        Pagina Creada por una persona con 0 conocimientos de desarrollo web.
+      </p>
     </footer>
   </body>
 </html>
