--- a/GaleriaWoW.html
+++ b/GaleriaWoW.html
@@ -1,70 +1,104 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Descarga</title>
+    <title>Galeria</title>
     <link
       rel="shortcut icon"
       href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"
     />
+    <link rel="stylesheet" href="Css-Galeria.css" />
   </head>
   <body>
-    <header>
-      <h1>World of Illidan</h1>
-      <p><a href="Pagina de Descargas.html">Descargas</a></p>
-      <p><a href="Pagina de incio wow.html">Inicio</a></p>
-
-      <p>
-        <a href="https://es-la.facebook.com/Blizzard/" target="_blank">
+    <header id="fondo">
+      <h1 id="tittle">World of Illidan</h1>
+      <p id="face">
+        <a
+          id="face"
+          href="https://es-la.facebook.com/Blizzard/"
+          target="_blank"
+        >
           Facebook</a
         >
       </p>
-      <p>
-        <a href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
+      <p id="insta">
+        <a
+          id="insta"
+          href="https://www.instagram.com/blizzard/?hl=es"
+          target="_blank"
           >Instagram</a
         >
       </p>
-      <p>
+      <p id="twit">
         <a
+          id="twit"
           href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
           target="_blank"
           >Twitter</a
         >
       </p>
-      <div class="topnav">
-        <input type="text" placeholder="Search..." />
-      </div>
+      <p id="descarga">
+        <a id="descarga" href="Pagina de Descargas.html">Descargas</a>
+      </p>
+      <p id="inicio">
+        <a id="inicio" href="Pagina de incio wow.html">Inicio</a>
+      </p>
     </header>
     <main>
-      <h1>Imagenes</h1>
-      <img src="https://images8.alphacoders.com/371/thumbbig-371783.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images5.alphacoders.com/298/thumbbig-298845.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images2.alphacoders.com/104/thumbbig-104002.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images8.alphacoders.com/916/thumbbig-916460.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images7.alphacoders.com/593/thumbbig-593903.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images6.alphacoders.com/611/thumbbig-611149.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images3.alphacoders.com/631/thumbbig-631697.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images4.alphacoders.com/113/thumbbig-1131814.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images3.alphacoders.com/120/thumbbig-1208213.webp" />
-      <p>Breve descripcion</p>
-      <img src="https://images3.alphacoders.com/200/thumbbig-200959.webp" />
-      <p>Breve descripcion</p>
-
-      <a
+      <p id="imgtop">
+        <img
+          id="imgtop"
+          src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg"
+        />
+      </p>
+      <h1 id="Subtitulo">Imagenes</h1>
+      <img
+        id="img2"
+        src="https://images5.alphacoders.com/298/thumbbig-298845.webp"
+      />
+      <p id="bd2">Breve descripcion</p>
+      <p id="img1">
+        <img
+          id="img1"
+          src="https://images8.alphacoders.com/371/thumbbig-371783.webp"
+        />
+      </p>
+      <p id="bd1">Breve descripcion</p>
+      <img
+        id="img3"
+        src="https://images2.alphacoders.com/104/thumbbig-104002.webp"
+      />
+      <p id="bd3">Breve descripcion</p>
+      <p id="img4">
+        <img
+          id="img4"
+          src="https://images8.alphacoders.com/916/thumbbig-916460.webp"
+        />
+      </p>
+      <p id="bd4">Breve descripcion</p>
+      <img id="img5" src="https://images7.alphacoders.com/593/thumbbig-593903.webp" />
+      <p id="bd5" >Breve descripcion</p>
+      <p id="img6"><img id="img6" src="https://images6.alphacoders.com/611/thumbbig-611149.webp" /></p>
+      <p  id="bd6">Breve descripcion</p>
+      <img  id="img7" src="https://images3.alphacoders.com/631/thumbbig-631697.webp" />
+      <p id="bd7" >Breve descripcion</p>
+      <p  id="img8"><img id="img8" src="https://images4.alphacoders.com/113/thumbbig-1131814.webp" />
+      </p>
+      <p  id="bd8">Breve descripcion</p>
+      <img id="img9" src="https://images3.alphacoders.com/120/thumbbig-1208213.webp" />
+      <p id="bd9" >Breve descripcion</p>
+      <p id="img10"><img  id="img10" src="https://images3.alphacoders.com/200/thumbbig-200959.webp" />
+      </p>
+      <p id="bd10">Breve descripcion</p>
+<p id="boton">
+      <a  id="boton"
         href="https://wall.alphacoders.com/tag/illidan-stormrage-wallpapers?lang=Spanish"
         target="_blank"
         >Para descargar imágenes 4K toca aqui</a
       >
+    </p>
     </main>
     <footer>
-      <p>
+      <p id="piepagina" >
         Pagina Creada por una persona con 0 conocimientos de desarrollo web.
       </p>
     </footer>
