--- a/Illidan en Wow.html
+++ b/Illidan en Wow.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Descarga</title>
+    <title>Illidan en wow</title>
     <link
       rel="shortcut icon"
       href="https://i.blogs.es/c5f49c/world-of-warcraft-legion/450_1000.webp"
     />
+    <link rel="stylesheet" href="Css-Illidan-En-Wow.css">
   </head>
 
   <body>
-    <header>
-      <h1>World of Illidan</h1>
-      <p><a href="Pagina de Descargas.html">Descargas</a></p>
-      <p><a href="Pagina de incio wow.html">Inicio</a></p>
-
-      <p>
-        <a href="https://es-la.facebook.com/Blizzard/" target="_blank">
+    <header id="presentacion">
+      <h1 id="titulo" >World of Illidan</h1>
+  <p id="face">
+        <a  id="face" href="https://es-la.facebook.com/Blizzard/" target="_blank">
           Facebook</a
         >
       </p>
-      <p>
-        <a href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
+      <p id="insta" >
+        <a id="insta" href="https://www.instagram.com/blizzard/?hl=es" target="_blank"
           >Instagram</a
         >
       </p>
-      <p>
-        <a
+      <p  id="twt">
+        <a  id="twt"
           href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
           target="_blank"
           >Twitter</a
         >
       </p>
-      <div class="topnav">
-        <input type="text" placeholder="Search..." />
-      </div>
+      <p id="descarga"><a id="descarga" href="Pagina de Descargas.html">Descargas</a></p>
+      <p id="inicio"><a id="inicio"  href="Pagina de incio wow.html">Inicio</a></p>
+
     </header>
     <main>
-      <h1>Illidan en World of Warcraft</h1>
-      <p>
+      <p id="imgtop" >
+        <img  id="imgtop" src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg" >
+      </p>
+      <div class="topnav" id="nav">
+        <input type="text" placeholder="Search..." />
+      </div>
+      
+      <h1 id="subtitulo">Illidan en World of Warcraft</h1>
+      <p id="text">
         De acuerdo con el manual que vino con la expansión The Burning Crusade,
         Illidan sabe que Kil'jaeden no ha olvidado su fracaso de destruir el
         Trono Helado. Dice que espera un ataque ofensivo de la Legión y que esta
@@ -52,9 +57,8 @@
         común: la Legión Ardiente. Kael'thas lideró el primer asalto, con orden
         directa de Illidan o con la autorización de Illidan.
       </p>
-      <iframe
-        width="560"
-        height="315"
+      <iframe id="video"
+
         src="https://www.youtube.com/embed/4x8KRXr0Ilc"
         title="YouTube video player"
         frameborder="0"
@@ -63,7 +67,7 @@
       ></iframe>
     </main>
     <footer>
-      <p>
+      <p  id="piepagina">
         Pagina Creada por una persona con 0 conocimientos de desarrollo web.
       </p>
     </footer>
