--- a/Pagina de incio wow.html
+++ b/Pagina de incio wow.html
@@ -50,22 +50,25 @@
     <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html">Citas</a></p>
     <p id="img">
       <img
-        src="https://as01.epimg.net/meristation/imagenes/2018/09/28/reportajes/1538086087_636760_1538647159_noticia_normal.jpg" />
+        src="https://images5.alphacoders.com/105/thumbbig-1053714.webp" />
     </p>
-    <section>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-      <li>test</li>
-    </section>
-
+    <div id="puntos">
+      <section>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </section>
+  
+    </div>
+    <div  id="textofondo">
     <p id="text">
       Illidan Tempestira (Illidan Stormrage en Warcraft III e Illigay Furia de
       Tormenta en los libros de RPG) fue el autoproclamado Señor de
@@ -77,6 +80,8 @@
       muchos hechizos siendo cazador de demonios, hechicero, y habiendo
       recibido los poderes de la Calavera de Gul'dan
     </p>
+  
+  
     <p id="text2">
       Sus deseos de poder y magia arcana lo han conducido a el hacer actos
       horroríficos en contra de su propia gente y las razas de Azeroth,
@@ -90,6 +95,7 @@
       su sagrario interior y lo derrotaron, poniendo punto final a una de los
       historias más trágicas en Azeroth.
     </p>
+  </div>
   </main>
   <footer>
     <p id="piepagina">
