--- a/Pagina de incio wow.html
+++ b/Pagina de incio wow.html
@@ -25,7 +25,7 @@
         target="_blank">Twitter</a>
     </p>
     <div class="topnav" id="nav" >
-      <input type="text" placeholder="Search..." />
+      <input type="text" placeholder="Buscar..." />
     </div>
   </header>
   <main>
@@ -70,7 +70,7 @@
     </div>
     <div  id="textofondo">
     <p id="text">
-      Illidan Tempestira (Illidan Stormrage en Warcraft III e Illigay Furia de
+      Illidan Tempestira (Illidan Stormrage en Warcraft III e Illidan Furia de
       Tormenta en los libros de RPG) fue el autoproclamado Señor de
       Terrallende, que gobernó desde el Templo Oscuro. Illidan nació como un
       elfo de la noche, y, en palabras de Maiev Cantosombrío "no es un demonio
