--- a/Pagina de incio wow.html
+++ b/Pagina de incio wow.html
@@ -96,6 +96,8 @@
       historias más trágicas en Azeroth.
     </p>
   </div>
+
+ <div><a href="formulario.html">Formulario</a></div>
   </main>
   <footer>
     <p id="piepagina">
