--- a/formulario.html
+++ b/formulario.html
@@ -1,18 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-<title>Templo Oscuro</title>
-<link rel="shortcut icon" href="https://wow.zamimg.com/uploads/screenshots/normal/81133-templo-oscuro.jpg" />
-    </head>
+  <head>
+    <title>Templo Oscuro</title>
+    <link
+      rel="shortcut icon"
+      href="https://wow.zamimg.com/uploads/screenshots/normal/81133-templo-oscuro.jpg"
+    />
+    <link rel="stylesheet" href="Formulario-css.css" />
+  </head>
 
-    <body>
-        <header>
-formulario
-        </header>
-        <nav>
-            menu
-        </nav>
-        <main>contenido principal</main>
-        <footer>nose</footer>
-    </body>
+  <body>
+    <header>
+      <p id="titulo">Registrate en la pagina</p>
+
+      <p id="linkface">
+        
+        <a
+          id="linkface"
+          href="https://es-la.facebook.com/Blizzard/"
+          target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+          </svg>
+          </a
+        >
+      </p>
+      <p id="linkinst">
+        <a
+          id="linkinst"
+          href="https://www.instagram.com/blizzard/?hl=es"
+          target="_blank"
+          >Instagram</a
+        >
+      </p>
+      <p id="linktwitter">
+        <a
+          id="linktwitter"
+          href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+          target="_blank"
+          >Twitter</a
+        >
+      </p>
+    </header>
+    <main>
+      <p id="Ventanas">
+        <a id="Ventanas" href="Pagina de Descargas.html">Link de Descarga</a>
+      </p>
+
+      <p id="Ventanas">
+        <a id="Ventanas" href="Pagina de la biografia.html">Biografia</a>
+      </p>
+
+      <p id="Ventanas">
+        <a id="Ventanas" href="Illidan en Wow.html"
+          >El paso de Illidan por world of warcraft</a
+        >
+      </p>
+
+      <p id="Ventanas"><a id="Ventanas" href="GaleriaWoW.html">Galeria</a></p>
+
+      <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html">Citas</a></p>
+      <form role="form" id="fondo">
+        <div   class="form-group" id="nombre" >
+            <label for="ejemplo_usuario_5">Nombre de Usuario</label>
+            <input type="nombre"
+               class="form-control"
+               id="ejemplo_usuario_5"
+               placeholder="introduce su nombre de usuario" >
+        </div>
+        <div class="form-group" id="email">
+          <label for="ejemplo_email_1">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="ejemplo_email_1"
+            placeholder="Introduce tu email"
+          />
+        </div>
+        <div class="form-group" id="contraseña" >
+          <label for="ejemplo_password_1">Contraseña</label>
+          <input 
+            type="password"
+            class="form-control"
+            id="ejemplo_password_1"
+            placeholder="Contraseña"
+            
+          />
+        </div>
+        <div class="checkbox" id="terminos">
+          <label>
+             Estoy de acuerdo con los terminos y
+            condiciones
+            <input   type="checkbox" />
+          </label>
+        </div>
+        <div id="registrar">
+          <button type="submit" class="btn btn-default">Registrar</button>
+        </div>
+      </form>
+      <p id="img">
+        <img src="https://images5.alphacoders.com/105/thumbbig-1053714.webp" />
+      </p>
+    </main>
+    <footer>
+      <p id="piepagina">
+        Pagina Creada por una persona con 0 conocimientos de desarrollo web.
+      </p>
+    </footer>
+  </body>
 </html>
