--- a/Pagina de Descargas.html
+++ b/Pagina de Descargas.html
@@ -37,8 +37,8 @@
       <p id="imgtop" >
         <img  id="imgtop" src="https://www.mundodeportivo.com/files/og_thumbnail/uploads/2016/09/23/60e715ef5bf20.jpeg" >
       </p>
-      <h1>Obtener el juego gratis aqui</h1>
-      <li>
+      <h1 id="fondotitulo">Obtener el juego gratis aqui</h1>
+      <li >
         <a id="wow" href="https://naerzone.com/index.php" target="_blank">Naerzone</a>
       </li>
       <li><a id="wow" href="https://ultimowow.com/es/" target="_blank">Ultimowow</a></li>
@@ -48,7 +48,7 @@
       <li>
         <a id="wow" href="https://www.chromiecraft.com/" target="_blank">Chromiecraft</a>
       </li>
-      <h1>Obtener el juego oficial</h1>
+      <h1 id="fondotitulo">Obtener el juego oficial aqui</h1>
       <li>
         <a id="wow" href="https://wowclassic.blizzard.com/es-es/" target="_blank"
           >Wow Classic</a
