--- a/formulario.html
+++ b/formulario.html
@@ -1,110 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <title>Templo Oscuro</title>
-    <link
-      rel="shortcut icon"
-      href="https://wow.zamimg.com/uploads/screenshots/normal/81133-templo-oscuro.jpg"
-    />
-    <link rel="stylesheet" href="Formulario-css.css" />
-  </head>
 
-  <body>
-    <header>
-      <p id="titulo">Registrate en la pagina</p>
+<head>
+  <title>Templo Oscuro</title>
+  <link rel="shortcut icon" href="https://wow.zamimg.com/uploads/screenshots/normal/81133-templo-oscuro.jpg" />
+  <link rel="stylesheet" href="Formulario-css.css" />
+</head>
 
-      <p id="linkface">
-        
-        <a
-          id="linkface"
-          href="https://es-la.facebook.com/Blizzard/"
-          target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-          </svg>
-          </a
-        >
-      </p>
-      <p id="linkinst">
-        <a
-          id="linkinst"
-          href="https://www.instagram.com/blizzard/?hl=es"
-          target="_blank"
-          >Instagram</a
-        >
-      </p>
-      <p id="linktwitter">
-        <a
-          id="linktwitter"
-          href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-          target="_blank"
-          >Twitter</a
-        >
-      </p>
-    </header>
-    <main>
+<body>
+  <header>
+    <p id="titulo">Registrate en la pagina</p>
+
+    <p id="linkface">
+      <a id="linkface" href="https://es-la.facebook.com/Blizzard/" target="_blank"><svg
+          xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="bi bi-facebook" viewBox="0 0 16 16">
+          <path
+            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+        </svg>
+      </a>
+    </p>
+    <p id="linkinst">
+      <a id="linkinst" href="https://www.instagram.com/blizzard/?hl=es" target="_blank"><svg
+          xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="bi bi-instagram" viewBox="0 0 16 16">
+          <path
+            d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+        </svg></a>
+    </p>
+    <p id="linktwitter">
+      <a id="linktwitter"
+        href="https://twitter.com/BlizzardCS_ES?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+        target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="bi bi-twitter"
+          viewBox="0 0 16 16">
+          <path
+            d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
+        </svg></a>
+    </p>
+  </header>
+  <main>
+    <p id="Ventanas">
+      <a id="Ventanas" href="Pagina de Descargas.html"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
+          fill="currentColor" class="bi bi-arrow-down-square-fill" viewBox="0 0 16 16">
+          <path
+            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5a.5.5 0 0 1 1 0z" />
+        </svg></a>
+    </p>
+
+    <p id="Ventanas">
+      <a id="Ventanas" href="Pagina de la biografia.html"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
+          fill="currentColor" class="bi bi-book-fill" viewBox="0 0 16 16">
+          <path
+            d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+        </svg></a>
+    </p>
+    <div>
       <p id="Ventanas">
-        <a id="Ventanas" href="Pagina de Descargas.html">Link de Descarga</a>
+        <a id="Ventanas" href="Illidan en Wow.html"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
+            fill="currentColor" class="bi bi-text-center" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M4 12.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z" />
+          </svg></a>
       </p>
+    </div>
+    <div>
+      <p id="Ventanas"><a id="Ventanas" href="GaleriaWoW.html"><svg xmlns="http://www.w3.org/2000/svg" width="50"
+            height="50" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
+            <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+            <path
+              d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z" />
+          </svg></a></p>
+    </div>
+    <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html"><svg xmlns="http://www.w3.org/2000/svg" width="50"
+          height="50" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+          <path
+            d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+        </svg></a></p>
+        <form role="form" id="fondo">
+          <div id="jumbo">
+            <div class="jumbotron jumbotron-fluid">
+              <div class="container">
+              </div>
+            </div>
+            <div class="container">
+              <div class="form-group">
+                  <h1>Resgistra</h1>
+              </div>
+              <div class="form-group" id="nombre">
+                <label for="ejemplo_usuario_5">Usuario</label>
+                <input type="nombre" class="form-control" id="ejemplo_usuario_5"
+                  placeholder="Nombre de usuario" />
+              </div>
+              <div class="form-group" id="contraseña">
+                <label for="ejemplo_password_1">Contraseña</label>
+                <input type="password" class="form-control" id="ejemplo_password_1" placeholder="Contraseña" />
+              </div>
+              <div class="form-group" id="email">
+                <label for="ejemplo_email_1">Email</label>
+                <input type="email" class="form-control" id="ejemplo_email_1" placeholder="Email" />
+              </div>
+              <div class="checkbox" id="terminos">
+                <label>
+                  Estoy de acuerdo con los terminos y condiciones
+                  <input type="checkbox" />
+                </label>
+              </div>
+              <div id="registrar">
+                <button type="submit" class="btn btn-default">Registrar</button>
+              </div>
+            </div>
+          </div>   
+    </form>
+  </main>
+  <footer>
+    <p id="piepagina">
+      Pagina Creada por una persona con 0 conocimientos de desarrollo web.
+    </p>
+  </footer>
+</body>
 
-      <p id="Ventanas">
-        <a id="Ventanas" href="Pagina de la biografia.html">Biografia</a>
-      </p>
-
-      <p id="Ventanas">
-        <a id="Ventanas" href="Illidan en Wow.html"
-          >El paso de Illidan por world of warcraft</a
-        >
-      </p>
-
-      <p id="Ventanas"><a id="Ventanas" href="GaleriaWoW.html">Galeria</a></p>
-
-      <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html">Citas</a></p>
-      <form role="form" id="fondo">
-        <div   class="form-group" id="nombre" >
-            <label for="ejemplo_usuario_5">Nombre de Usuario</label>
-            <input type="nombre"
-               class="form-control"
-               id="ejemplo_usuario_5"
-               placeholder="introduce su nombre de usuario" >
-        </div>
-        <div class="form-group" id="email">
-          <label for="ejemplo_email_1">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="ejemplo_email_1"
-            placeholder="Introduce tu email"
-          />
-        </div>
-        <div class="form-group" id="contraseña" >
-          <label for="ejemplo_password_1">Contraseña</label>
-          <input 
-            type="password"
-            class="form-control"
-            id="ejemplo_password_1"
-            placeholder="Contraseña"
-            
-          />
-        </div>
-        <div class="checkbox" id="terminos">
-          <label>
-             Estoy de acuerdo con los terminos y
-            condiciones
-            <input   type="checkbox" />
-          </label>
-        </div>
-        <div id="registrar">
-          <button type="submit" class="btn btn-default">Registrar</button>
-        </div>
-      </form>
-      <p id="img">
-        <img src="https://images5.alphacoders.com/105/thumbbig-1053714.webp" />
-      </p>
-    </main>
-    <footer>
-      <p id="piepagina">
-        Pagina Creada por una persona con 0 conocimientos de desarrollo web.
-      </p>
-    </footer>
-  </body>
 </html>
