--- a/formulario.html
+++ b/formulario.html
@@ -69,8 +69,7 @@
               d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z" />
           </svg></a></p>
     </div>
-    <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html"><svg xmlns="http://www.w3.org/2000/svg" width="50"
-          height="50" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+    <p id="Ventanas"><a id="Ventanas" href="CitasIllidan.html"><svg xmlns="http://www.w3.org/2000/svg" >
           <path
             d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
         </svg></a></p>
